--- a/index.html
+++ b/index.html
@@ -1361,6 +1361,14 @@
         }
         
         @media (max-width: 768px) {
+            .header {
+                position: relative !important;
+                top: auto !important;
+            }
+            .promo-banner {
+                position: relative !important;
+                top: auto !important;
+            }
             .container { 
                 padding: 0 1rem;
                 max-width: 100%;
@@ -1414,6 +1422,14 @@
         }
         
         @media (max-width: 576px) {
+            .header {
+                position: relative !important;
+                top: auto !important;
+            }
+            .promo-banner {
+                position: relative !important;
+                top: auto !important;
+            }
             section { padding: 5rem 0; }
             .container {
                 padding: 0 1rem;
